[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/components/CadenceComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/dog_g.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/dog_c.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/dog_e.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/dog_toy.ogg" type="AudioStream" id=7]

[node name="CadenceComponent" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Light3" parent="." index="1" instance=ExtResource( 2 )]
key = "?"

[node name="Light2" parent="." index="2" instance=ExtResource( 2 )]
key = "."

[node name="Light1" parent="." index="3" instance=ExtResource( 2 )]
key = ","

[node name="Activate" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 7 )

[node name="C" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 5 )

[node name="E" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 6 )

[node name="G" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 4 )
